# metar_station

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: chk_raw_station.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/raw_station/: warning.json
metar_station/raw/: download.py  io.py  transform.py  validate_ge.py  validate_pandera.py
metar_station/utils/: io.py  prefect.py
notes/: development.md  pipeline_flows.md  testing.md
prefect/: station_raw.py
tests/raw/: test_download.py  test_io.py  test_transform.py  test_validate_ge.py  test_validate_pandera.py
tests/utils/: test_io.py  test_prefect.py
